// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PostItemForm correctly 1`] = `
<div>
  <h3>
    Enter Details
  </h3>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="title"
    >
      Title: 
    </label>
    <br />
    <input
      className="textBox"
      id="title"
      name="title"
      onChange={[Function]}
      type="text"
      value=""
    />
    <br />
    <br />
    <label
      htmlFor="body"
    >
      Body: 
    </label>
    <br />
    <textarea
      className="textAreaBox"
      id="body"
      name="body"
      onChange={[Function]}
      value=""
    />
    <br />
    <span
      className="error"
    />
    <br />
    <br />
    <input
      className="submit"
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;

exports[`renders PostItemForm correctly with post data 1`] = `
<div>
  <h3>
    Enter Details
  </h3>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="title"
    >
      Title: 
    </label>
    <br />
    <input
      className="textBox"
      id="title"
      name="title"
      onChange={[Function]}
      type="text"
      value="post title"
    />
    <br />
    <br />
    <label
      htmlFor="body"
    >
      Body: 
    </label>
    <br />
    <textarea
      className="textAreaBox"
      id="body"
      name="body"
      onChange={[Function]}
      value="post body"
    />
    <br />
    <span
      className="error"
    />
    <br />
    <br />
    <input
      className="submit"
      type="submit"
      value="Submit"
    />
  </form>
</div>
`;

exports[`renders error for invalid form submission 1`] = `
<PostItemForm>
  <div>
    <h3>
      Enter Details
    </h3>
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="title"
      >
        Title: 
      </label>
      <br />
      <input
        className="textBox"
        id="title"
        name="title"
        onChange={[Function]}
        type="text"
        value=""
      />
      <br />
      <br />
      <label
        htmlFor="body"
      >
        Body: 
      </label>
      <br />
      <textarea
        className="textAreaBox"
        id="body"
        name="body"
        onChange={[Function]}
        value=""
      />
      <br />
      <span
        className="error"
      />
      <br />
      <br />
      <input
        className="submit"
        type="submit"
        value="Submit"
      />
    </form>
  </div>
</PostItemForm>
`;
